@@ -1,7 +1,7 @@
 // qsamplerMessages.cpp
 //
 /****************************************************************************
-   Copyright (C) 2004-2007, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2004-2008, rncbc aka Rui Nuno Capela. All rights reserved.
    Copyright (C) 2007, Christian Schoenebeck
 
    This program is free software; you can redistribute it and/or
@@ -24,8 +24,11 @@
 #include "qsamplerMessages.h"
 
 #include <QSocketNotifier>
+
+#include <QFile>
 #include <QTextEdit>
 #include <QTextCursor>
+#include <QTextStream>
 #include <QTextBlock>
 #include <QScrollBar>
 #include <QDateTime>
@@ -63,21 +66,23 @@ Messages::Messages ( QWidget *pParent )
     m_fdStdout[QSAMPLER_MESSAGES_FDWRITE] = QSAMPLER_MESSAGES_FDNIL;
 
 	// Create local text view widget.
-	m_pTextView = new QTextEdit(this);
-//  QFont font(m_pTextView->font());
+	m_pMessagesTextView = new QTextEdit(this);
+//  QFont font(m_pMessagesTextView->font());
 //  font.setFamily("Fixed");
-//  m_pTextView->setFont(font);
-	m_pTextView->setLineWrapMode(QTextEdit::NoWrap);
-	m_pTextView->setReadOnly(true);
-	m_pTextView->setUndoRedoEnabled(false);
-//	m_pTextView->setTextFormat(Qt::LogText);
+//  m_pMessagesTextView->setFont(font);
+	m_pMessagesTextView->setLineWrapMode(QTextEdit::NoWrap);
+	m_pMessagesTextView->setReadOnly(true);
+	m_pMessagesTextView->setUndoRedoEnabled(false);
+//	m_pMessagesTextView->setTextFormat(Qt::LogText);
 
 	// Initialize default message limit.
 	m_iMessagesLines = 0;
 	setMessagesLimit(QSAMPLER_MESSAGES_MAXLINES);
 
+	m_pMessagesLog = NULL;
+
 	// Prepare the dockable window stuff.
-	QDockWidget::setWidget(m_pTextView);
+	QDockWidget::setWidget(m_pMessagesTextView);
 	QDockWidget::setFeatures(QDockWidget::AllDockWidgetFeatures);
 	QDockWidget::setAllowedAreas(
 		Qt::TopDockWidgetArea | Qt::BottomDockWidgetArea);
@@ -95,6 +100,8 @@ Messages::Messages ( QWidget *pParent )
 // Destructor.
 Messages::~Messages (void)
 {
+	setLogging(false);
+
     // No more notifications.
     if (m_pStdoutNotifier)
         delete m_pStdoutNotifier;
@@ -103,9 +110,9 @@ Messages::~Messages (void)
 }
 
 
-void Messages::showEvent (QShowEvent* event)
+void Messages::showEvent ( QShowEvent *pEvent )
 {
-    QDockWidget::showEvent(event);
+    QDockWidget::showEvent(pEvent);
     emit visibilityChanged(isVisible());
 }
 
@@ -194,12 +201,12 @@ void Messages::setCaptureEnabled ( bool bCapture )
 // Message font accessors.
 QFont Messages::messagesFont (void)
 {
-    return m_pTextView->font();
+    return m_pMessagesTextView->font();
 }
 
-void Messages::setMessagesFont( const QFont& font )
+void Messages::setMessagesFont ( const QFont& font )
 {
-    m_pTextView->setFont(font);
+    m_pMessagesTextView->setFont(font);
 }
 
 
@@ -215,26 +222,51 @@ void Messages::setMessagesLimit ( int iMessagesLimit )
     m_iMessagesHigh  = iMessagesLimit + (iMessagesLimit / 3);
 }
 
-
-// The main utility methods.
-void Messages::appendMessages ( const QString& s )
+// Messages logging stuff.
+bool Messages::isLogging (void) const
 {
-    appendMessagesColor(s, "#999999");
+	return (m_pMessagesLog != NULL);
 }
 
-void Messages::appendMessagesColor ( const QString& s, const QString &c )
+void Messages::setLogging ( bool bEnabled, const QString& sFilename )
 {
-	appendMessagesText("<font color=\"" + c + "\">"
-		+ QTime::currentTime().toString("hh:mm:ss.zzz")
-		+ ' ' + s + "</font>");
+	if (m_pMessagesLog) {
+		appendMessages(tr("Logging stopped --- %1 ---")
+			.arg(QDateTime::currentDateTime().toString()));
+		m_pMessagesLog->close();
+		delete m_pMessagesLog;
+		m_pMessagesLog = NULL;
+	}
+
+	if (bEnabled) {
+		m_pMessagesLog = new QFile(sFilename);
+		if (m_pMessagesLog->open(QIODevice::Text | QIODevice::Append)) {
+			appendMessages(tr("Logging started --- %1 ---")
+				.arg(QDateTime::currentDateTime().toString()));
+		} else {
+			delete m_pMessagesLog;
+			m_pMessagesLog = NULL;
+		}
+	}
 }
 
-void Messages::appendMessagesText ( const QString& s )
+
+// Messages log output method.
+void Messages::appendMessagesLog ( const QString& s )
 {
-    // Check for message line limit...
-    if (m_iMessagesLines > m_iMessagesHigh) {
-		m_pTextView->setUpdatesEnabled(false);
-		QTextCursor textCursor(m_pTextView->document()->begin());
+	if (m_pMessagesLog) {
+		QTextStream(m_pMessagesLog) << s << endl;
+		m_pMessagesLog->flush();
+	}
+}
+
+// Messages widget output method.
+void Messages::appendMessagesLine ( const QString& s )
+{
+	// Check for message line limit...
+	if (m_iMessagesLines > m_iMessagesHigh) {
+		m_pMessagesTextView->setUpdatesEnabled(false);
+		QTextCursor textCursor(m_pMessagesTextView->document()->begin());
 		while (m_iMessagesLines > m_iMessagesLimit) {
 			// Move cursor extending selection
 			// from start to next line-block...
@@ -244,12 +276,32 @@ void Messages::appendMessagesText ( const QString& s )
 		}
 		// Remove the excessive line-blocks...
 		textCursor.removeSelectedText();
-		m_pTextView->setUpdatesEnabled(true);
-    }
+		m_pMessagesTextView->setUpdatesEnabled(true);
+	}
 
-	// Count always as a new line out there...
-	m_pTextView->append(s);
+	m_pMessagesTextView->append(s);
 	m_iMessagesLines++;
+}
+
+
+// The main utility methods.
+void Messages::appendMessages ( const QString& s )
+{
+    appendMessagesColor(s, "#999999");
+}
+
+void Messages::appendMessagesColor ( const QString& s, const QString &c )
+{
+	QString sText = QTime::currentTime().toString("hh:mm:ss.zzz") + ' ' + s;
+	
+	appendMessagesLine("<font color=\"" + c + "\">" + sText + "</font>");
+	appendMessagesLog(sText);
+}
+
+void Messages::appendMessagesText ( const QString& s )
+{
+	appendMessagesLine(s);
+	appendMessagesLog(s);
 }
 
 
@@ -257,7 +309,7 @@ void Messages::appendMessagesText ( const QString& s )
 void Messages::clear (void)
 {
 	m_iMessagesLines = 0;
-	m_pTextView->clear();
+	m_pMessagesTextView->clear();
 }
 
 } // namespace QSampler
