@@ -1,7 +1,7 @@
 // qsamplerOptions.h
 //
 /****************************************************************************
-   Copyright (C) 2004-2007, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2004-2008, rncbc aka Rui Nuno Capela. All rights reserved.
    Copyright (C) 2007, Christian Schoenebeck
 
    This program is free software; you can redistribute it and/or
@@ -63,6 +63,10 @@ public:
 	bool    bServerStart;
 	QString sServerCmdLine;
 	int     iStartDelay;
+
+	// Logging options...
+	bool    bMessagesLog;
+	QString sMessagesLogPath;
 
 	// Display options...
 	QString sDisplayFont;
