@@ -2,7 +2,7 @@
  <author>rncbc aka Rui Nuno Capela</author>
  <comment>qsampler - A LinuxSampler Qt GUI Interface.
 
-   Copyright (C) 2005-2007, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2005-2008, rncbc aka Rui Nuno Capela. All rights reserved.
    Copyright (C) 2007, Christian Schoenebeck
 
    This program is free software; you can redistribute it and/or
@@ -404,7 +404,7 @@
             <property name="sizeHint" >
              <size>
               <width>20</width>
-              <height>80</height>
+              <height>20</height>
              </size>
             </property>
            </spacer>
@@ -486,6 +486,120 @@
             </property>
             <property name="buddy" >
              <cstring>ServerTimeoutSpinBox</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="1" >
+           <spacer>
+            <property name="orientation" >
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeType" >
+             <enum>QSizePolicy::Expanding</enum>
+            </property>
+            <property name="sizeHint" >
+             <size>
+              <width>20</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="LoggingGroupBox" >
+         <property name="font" >
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="title" >
+          <string>Logging</string>
+         </property>
+         <property name="flat" >
+          <bool>true</bool>
+         </property>
+         <layout class="QGridLayout" >
+          <property name="margin" >
+           <number>8</number>
+          </property>
+          <property name="spacing" >
+           <number>4</number>
+          </property>
+          <item row="0" column="1" colspan="3" >
+           <widget class="QComboBox" name="MessagesLogPathComboBox" >
+            <property name="sizePolicy" >
+             <sizepolicy>
+              <hsizetype>7</hsizetype>
+              <vsizetype>0</vsizetype>
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="font" >
+             <font>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="toolTip" >
+             <string>Messages log file</string>
+            </property>
+            <property name="editable" >
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="4" >
+           <widget class="QToolButton" name="MessagesLogPathToolButton" >
+            <property name="minimumSize" >
+             <size>
+              <width>22</width>
+              <height>22</height>
+             </size>
+            </property>
+            <property name="maximumSize" >
+             <size>
+              <width>24</width>
+              <height>24</height>
+             </size>
+            </property>
+            <property name="font" >
+             <font>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="focusPolicy" >
+             <enum>Qt::TabFocus</enum>
+            </property>
+            <property name="toolTip" >
+             <string>Browse for the messages log file location</string>
+            </property>
+            <property name="text" >
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0" >
+           <widget class="QCheckBox" name="MessagesLogCheckBox" >
+            <property name="font" >
+             <font>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="toolTip" >
+             <string>Whether to activate a messages logging to file.</string>
+            </property>
+            <property name="text" >
+             <string>&amp;Messages log file:</string>
+            </property>
+            <property name="shortcut" >
+             <string>Alt+M</string>
             </property>
            </widget>
           </item>
@@ -1124,6 +1238,9 @@
   <tabstop>ServerStartCheckBox</tabstop>
   <tabstop>ServerCmdLineComboBox</tabstop>
   <tabstop>StartDelaySpinBox</tabstop>
+  <tabstop>MessagesLogCheckBox</tabstop>
+  <tabstop>MessagesLogPathComboBox</tabstop>
+  <tabstop>MessagesLogPathToolButton</tabstop>
   <tabstop>DisplayFontPushButton</tabstop>
   <tabstop>DisplayEffectCheckBox</tabstop>
   <tabstop>AutoRefreshCheckBox</tabstop>
