@@ -5,6 +5,9 @@ ChangeLog
 
 CVS HEAD
 
+* Messages file logging makes its first long overdue appearance,
+  with user configurable settings in View/Options.../Server/Logging.
+
 * Bugfix in sampler channel dialog, driver combo boxes' content were
   screwed.
 
